src/test/deca/context/invalid/expr_cast_Object_to_float.deca
// Test of the rule (3.39) : can't cast Object to float.

{
	float var1;
	Object var2;
	var1 = (float)(var2);
}

// Résultat :
//# a
